Remove bug where invisible popover gets in the way

--- a/src/styles/tukey.css
+++ b/src/styles/tukey.css
@@ -2,7 +2,7 @@
 /* TODO split css into modules */
 
 .hidden {
-  opacity: 0;
+  display: none;
 }
 
 /* drawing */
